--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Blog</title>
+        <title>Park w Czerwionce - dziennik prac</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
@@ -13,10 +13,9 @@
 	{% if user.is_authenticated %}
 	<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 	{% endif %}
-          <h1><a href="/">Blog</a></h1>
+          <h1><a href="/">Park w Czerwionce - dziennik prac </a></h1>
         </div>
-
-                
+        
     <div class="content container">
     <div class="row">
         <div class="col-md-8">
@@ -24,6 +23,10 @@
 	   {% endblock %}
         </div>
     </div>
-</div>
+    </div>
+    
+   
+
+
     </body>
 </html>
