--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,11 @@
     
       <div class="page-header">
 	{% if user.is_authenticated %}
-	<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+	   <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          
+	   <p class="top-menu">Witaj {{ user.username }} <small>(<a href="{% url 'logout' %}">Wyloguj się</a>)</small></p>
+	 {% else %}
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
 	{% endif %}
           <h1><a href="/">Park w Czerwionce - dziennik prac </a></h1>
         </div>
