--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+<p>Dane logowania niepoprawne.</p>
     {% endif %}
 
     <form method="post" action="{% url 'login' %}">
