--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,21 +1,29 @@
 body {
-    padding-left: 15px;
+    margin:0;
+    padding:0;
+    
+   
 }
 
 
 h1 a, h2 a {
     color: #C25100;
-    font-family: 'Lobster';
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .page-header {
-    background-color: #C25100;
+    background-color: #00C251;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
+ .page-header  a, .page-header  a:visited, .page-header  a:active {
+    color: #000;
+    text-decoration: none;
+}
+
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #000;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -25,7 +33,7 @@ h1 a, h2 a {
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .date {
@@ -53,6 +61,10 @@ h1, h2, h3, h4 {
 
 .post h2 a, .post h1 a:visited {
     color: #000000;
+}
+
+td {
+    padding:1px;
 }
 
 
