--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,7 +4,9 @@
         <title>Park w Czerwionce - dziennik prac</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<!--
 	<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+-->
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
@@ -13,7 +15,7 @@
 	{% if user.is_authenticated %}
 	   <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
           
-	   <p class="top-menu">Witaj {{ user.username }} <small>(<a href="{% url 'logout' %}">Wyloguj się</a>)</small></p>
+	   <p class="top-menu">{{ user.username }} <small>(<a href="{% url 'logout' %}">Wyloguj się</a>)</small></p>
 	 {% else %}
             <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
 	{% endif %}
