--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,19 +1,23 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post">
+<div class="post">
+  	
+
         {% if post.published_date %}
             <div class="date">
-                {{ post.published_date }}
+                {{ post.published_date }}, {{ post.author }}
             </div>
             {% endif %}
 	    {% if user.is_authenticated %}
-	    {% if today == post.published_date.day %}
+	    {% if today %}
 	    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 	    {% endif %}
 	    {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
+
+
 	
 
 	
